kubernetes/catalog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: catalog
  labels:
    app: catalog-service
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: catalog-service
